# python_skypro_14

./: README.md  classes.py  main.py  pyproject.toml  utils.py
src/: classes.py  main.py  utils.py
tests/: test_base_product.py  test_classes.py  test_lawngrass.py  test_mixin.py  test_smartphone.py  test_utils.py
